--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -164,6 +164,8 @@ node_types:
 
   tosca.nodes.Database.MySQL:
     derived_from: tosca.nodes.Database
+    metadata:
+      icon: /images/mysql-db.png
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -182,6 +184,8 @@ node_types:
 
   tosca.nodes.DBMS.MySQL:
     derived_from: tosca.nodes.DBMS
+    metadata:
+      icon: /images/mysql-server.png
     properties:
       port:
         type: integer
@@ -207,6 +211,8 @@ node_types:
 
   tosca.nodes.WebServer.Apache:
     derived_from: tosca.nodes.WebServer
+    metadata:
+      icon: /images/apache.png
     interfaces:
       Standard:
         create:
@@ -218,6 +224,8 @@ node_types:
 
   tosca.nodes.indigo.Database.MySQL:
     derived_from: tosca.nodes.Database.MySQL
+    metadata:
+      icon: /images/mysql-db-indigo.png
     properties:
       access_host:
         type: string
@@ -300,6 +308,8 @@ node_types:
 
   tosca.nodes.indigo.GalaxyPortal:
     derived_from: tosca.nodes.WebServer
+    metadata:
+      icon: /images/galaxy.png
     properties:
       admin_email:
         type: string
@@ -479,6 +489,8 @@ node_types:
  
   tosca.nodes.indigo.GalaxyWN:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/galaxy.png
     properties:
       front_end_ip:
         type: string
@@ -592,6 +604,8 @@ node_types:
 
   tosca.nodes.indigo.GalaxyShedTool:
     derived_from: tosca.nodes.WebApplication
+    metadata:
+      icon: /images/galaxy-toolshed.png
     properties:
       flavor:
         type: string
@@ -735,6 +749,8 @@ node_types:
 
   tosca.nodes.indigo.ElasticCluster:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/ec3.png
     properties:
       secret_token:
         type: string
@@ -863,6 +879,8 @@ node_types:
 
   tosca.nodes.indigo.LRMS.WorkerNode.Slurm:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
+    metadata:
+      icon: /images/slurm.png
     artifacts:
       - slurm_role:
           file: indigo-dc.slurm
@@ -921,6 +939,8 @@ node_types:
 
   tosca.nodes.indigo.LRMS.FrontEnd.Slurm:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
+    metadata:
+      icon: /images/slurm.png
     artifacts:
       - slurm_role:
           file: indigo-dc.slurm
@@ -1037,6 +1057,8 @@ node_types:
 
   tosca.nodes.indigo.DariahRepository:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/dariah.png
     properties:
       marathon_password:
         type: string
@@ -1178,6 +1200,8 @@ node_types:
 
   tosca.nodes.indigo.LRMS.FrontEnd.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
+    metadata:
+      icon: /images/mesos.png
     capabilities:
         lrms:
           type: tosca.capabilities.indigo.LRMS.Mesos
@@ -1281,6 +1305,8 @@ node_types:
 
   tosca.nodes.indigo.CmsServices:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/cms.png
     properties:
       cms_local_site:
         type: string
@@ -1386,6 +1412,8 @@ node_types:
 
   tosca.nodes.indigo.LRMS.WorkerNode.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
+    metadata:
+      icon: /images/mesos.png
     capabilities:
         host:
           type: tosca.capabilities.indigo.MesosSlave
@@ -1426,9 +1454,10 @@ node_types:
   tosca.nodes.indigo.MesosSlave:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode.Mesos
 
-
   tosca.nodes.indigo.CmsWnConfig:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/cms.png
     properties:
       cms_local_site:
         type: string
@@ -1501,6 +1530,8 @@ node_types:
 
   tosca.nodes.indigo.MesosLoadBalancer:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/mesos.png
     properties:
       master_ips:
         required: yes
@@ -1540,6 +1571,8 @@ node_types:
 
   tosca.nodes.indigo.SparkMesos:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/spark-mesos.png
     properties:
       marathon_password:
         type: string
@@ -1637,6 +1670,8 @@ node_types:
 
   tosca.nodes.indigo.OneDataStorage:
     derived_from: tosca.nodes.BlockStorage
+    metadata:
+      icon: /images/onedata.png
     properties:
       size:
         # to overwrite BlockStorage size property to set it as not required
@@ -1661,6 +1696,8 @@ node_types:
 
   tosca.nodes.indigo.HadoopMaster:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/hadoop-master.jpg
     artifacts:
       - hadoop_role:
           file: indigo-dc.hadoop
@@ -1674,6 +1711,8 @@ node_types:
 
   tosca.nodes.indigo.HadoopSlave:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/hadoop-wn.jpg
     properties:
       master_ip:
         required: yes
@@ -1691,6 +1730,8 @@ node_types:
 
   tosca.nodes.indigo.HaddockApp:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/Haddock.png
     properties:
       haddock_app_name:
         type: string
@@ -1711,6 +1752,8 @@ node_types:
 
   tosca.nodes.indigo.Disvis:
     derived_from: tosca.nodes.indigo.HaddockApp
+    metadata:
+      icon: /images/disvis.png
     properties:
       haddock_app_name:
         type: string
@@ -1721,6 +1764,8 @@ node_types:
 
   tosca.nodes.indigo.Powerfit:
     derived_from: tosca.nodes.indigo.HaddockApp
+    metadata:
+      icon: /images/powerfit.png
     properties:
       haddock_app_name:
         type: string
@@ -1742,6 +1787,8 @@ node_types:
 
   tosca.nodes.indigo.Ambertools:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/amber.jpg
     artifacts:
       - galaxy_role:
           file: indigo-dc.ambertools
@@ -1753,6 +1800,8 @@ node_types:
 
   tosca.nodes.indigo.Kepler:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/kepler.jpeg
     artifacts:
       - galaxy_role:
           file: indigo-dc.kepler
@@ -1764,6 +1813,8 @@ node_types:
 
   tosca.nodes.indigo.OphidiaServer:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/ophidia-server.png
     properties:
       io_ips:
         type: list
@@ -1791,6 +1842,8 @@ node_types:
 
   tosca.nodes.indigo.OphidiaIO:
     derived_from: tosca.nodes.SoftwareComponent
+    metadata:
+      icon: /images/ophidia-io.png
     properties:
       server_ip:
         type: string
