--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -3,10 +3,14 @@
   connection: local
   vars:
     docker_bridge_ip: "172.0.17.1"
+  pre_tasks:
+    - set_fact: marathon_lb_marathon_url="localhost"
+      when: (enable_consul_sd == false)
   roles:
     - role: indigo-dc.consul
       consul_mode: "agent"
       consul_servers: "{{ consul_server_ips }}"
+      when: (enable_consul_sd == true)
 
     - role: indigo-dc.marathon-lb
       marathon_lb_auth_creds: "{{marathon_username}}:{{marathon_password}}"
