Test role installation from git

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1243,7 +1243,8 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: indigo-dc.docker,deep-dev
+        #file: indigo-dc.docker,deep-dev
+        file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
