--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -14,5 +14,5 @@
       consul_servers: "{{ consul_server_ips }}"
       when: (enable_consul_sd == true)
 
-    - role: indigo-dc.marathon-lb
+    - role: ansible-role-marathon-lb
       marathon_lb_auth_creds: "{{marathon_username}}:{{marathon_password}}"
