--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -9,10 +9,12 @@
         marathon_lb_service_discovery: "none" 
       when: (enable_consul_sd == false)
   roles:
+    - role: indigo-dc.docker
+
     - role: indigo-dc.consul
       consul_mode: "agent"
       consul_servers: "{{ consul_server_ips }}"
       when: (enable_consul_sd == true)
 
-    - role: ansible-role-marathon-lb
+    - role: indigo-dc.marathon-lb
       marathon_lb_auth_creds: "{{marathon_username}}:{{marathon_password}}"
