--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1243,8 +1243,8 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        #file: indigo-dc.docker,deep-dev
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
+        file: indigo-dc.docker,deep-dev
+        #file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
@@ -1253,13 +1253,13 @@ node_types:
         file: indigo-dc.zookeeper
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-mesos.git,deep-dev
+        file: indigo-dc.mesos,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-marathon.git,deep-dev
+        file: indigo-dc.marathon,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       chronos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-chronos.git,deep-dev
+        file: indigo-dc.chronos,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1422,13 +1422,13 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
+        file: indigo-dc.docker,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-mesos.git,deep-dev
+        file: indigo-dc.mesos,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1541,13 +1541,13 @@ node_types:
         default: true
     artifacts:
       docker_agent_role:
-        file: git+https://github.com/indigo-dc/ansible-role-docker.git,deep-dev
+        file: indigo-dc.docker,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_lb_role:
-        file: git+https://github.com/indigo-dc/ansible-role-marathon-lb.git,deep-dev
+        file: indigo-dc.marathon-lb.git,deep-dev
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
